--- a/scripts/R21_abx_groups__code_for_Figure_S4.Rmd
+++ b/scripts/R21_abx_groups__code_for_Figure_S4.Rmd
@@ -29,46 +29,48 @@ types <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/191_types_of_medic
 ```
 
 ```{r}
-meds <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/169_all_medication.csv')  %>% 
-  select(mrn, drug_name_clean,class,  route,together, start_date, stop_date  ) %>% 
-  mutate(drug_name_clean = if_else(drug_name_clean == 'levofloxacin (levaquin)', 'levofloxacin', drug_name_clean)) %>% 
-  left_join(route_clean %>% select(-n)) %>% 
-  left_join(ptb %>% select(mrn, hct)) %>% 
-  mutate(startday = as.numeric(start_date - hct), stopday = as.numeric(stop_date - hct)) %>% 
-  filter(stopday > -5 & startday < 40) %>% 
-  filter(startday > -20 & stopday < 40) %>% 
-  left_join(types %>% select(-n, -class)) %>% 
-  select(-c(start_date, stop_date, hct, route)) %>% 
-  mutate(together = str_glue('{drug_name_clean}__{route_clean}'))
-
-# annotate the medication that are NA
-what <- meds %>% 
-  filter(is.na(drug_category_for_this_study)) %>% distinct(drug_name_clean, route_clean, class)
-
-# ertapenem  
-# the most important few
-few <- what %>% 
-  mutate(together = str_glue('{drug_name_clean}__{route_clean}')) %>%  
-  mutate(drug_category_for_this_study = if_else(together %in% c('amikacin__IV','gentamicin__IV','ampicillin__IV','penicillin v potassium__oral','cefdinir__oral','cephalexin__oral', 'azithromycin__IV', 'azithromycin__oral'), 'other_antibacterials', if_else(together == 'ertapenem__IV', 'broad_spectrum','not_antibacterial')))
-
-link <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/152_pid_match.csv')
-meds_updated <- bind_rows(
-  meds %>% filter(is.na(drug_category_for_this_study)) %>% select(-drug_category_for_this_study) %>% left_join(few  ),
-  meds %>% filter(!is.na(drug_category_for_this_study))
-) %>% select(-class, -route_clean) %>%
-   full_join(link) %>% select(-mrn) %>% relocate(pid, .before = 'drug_name_clean')
-
-
-meds_updated %>% write_csv('../data/R21_meds_updated_all_medication_classified.csv')
-
-# add the mrn back to the above table
-meds_updated_has_mrn <- meds_updated %>% 
-  left_join(link)
-
-meds_updated_has_mrn %>% write_csv('../data/R21_meds_updated_all_medication_classified_has_mrn.csv')
+# meds <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/169_all_medication.csv')  %>% 
+#   select(mrn, drug_name_clean,class,  route,together, start_date, stop_date  ) %>% 
+#   mutate(drug_name_clean = if_else(drug_name_clean == 'levofloxacin (levaquin)', 'levofloxacin', drug_name_clean)) %>% 
+#   left_join(route_clean %>% select(-n)) %>% 
+#   left_join(ptb %>% select(mrn, hct)) %>% 
+#   mutate(startday = as.numeric(start_date - hct), stopday = as.numeric(stop_date - hct)) %>% 
+#   filter(stopday > -5 & startday < 40) %>% 
+#   filter(startday > -20 & stopday < 40) %>% 
+#   left_join(types %>% select(-n, -class)) %>% 
+#   select(-c(start_date, stop_date, hct, route)) %>% 
+#   mutate(together = str_glue('{drug_name_clean}__{route_clean}'))
+# 
+# # annotate the medication that are NA
+# what <- meds %>% 
+#   filter(is.na(drug_category_for_this_study)) %>% distinct(drug_name_clean, route_clean, class)
+# 
+# # ertapenem  
+# # the most important few
+# few <- what %>% 
+#   mutate(together = str_glue('{drug_name_clean}__{route_clean}')) %>%  
+#   mutate(drug_category_for_this_study = if_else(together %in% c('amikacin__IV','gentamicin__IV','ampicillin__IV','penicillin v potassium__oral','cefdinir__oral','cephalexin__oral', 'azithromycin__IV', 'azithromycin__oral'), 'other_antibacterials', if_else(together == 'ertapenem__IV', 'broad_spectrum','not_antibacterial')))
+# 
+# link <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/152_pid_match.csv')
+# meds_updated <- bind_rows(
+#   meds %>% filter(is.na(drug_category_for_this_study)) %>% select(-drug_category_for_this_study) %>% left_join(few  ),
+#   meds %>% filter(!is.na(drug_category_for_this_study))
+# ) %>% select(-class, -route_clean) %>%
+#    full_join(link) %>% select(-mrn) %>% relocate(pid, .before = 'drug_name_clean')
+# 
+# 
+# meds_updated %>% write_csv('../data/R21_meds_updated_all_medication_classified.csv')
+# 
+# # add the mrn back to the above table
+# meds_updated_has_mrn <- meds_updated %>% 
+#   left_join(link)
+# 
+# meds_updated_has_mrn %>% write_csv('../data/R21_meds_updated_all_medication_classified_has_mrn.csv')
 ```
 
 ```{r}
+meds_updated <- read_csv('../data/R21_meds_updated_all_medication_classified.csv')
+
 # make the df with day exposure type 
 meds_expanded <- meds_updated %>%
     distinct() %>% 
@@ -122,20 +124,33 @@ df_complete <- df %>%
  
 # 3. Define the color palette
 color_palette <- c(
-  "broad_spectrum" = "#FF000070",
-  "fluoroquinolones" = "#0000FF70",
-  "both" = "#A020F090",
-  "not_antibacterial" = "#FFFFFF70",
-  "other_antibacterials" = "#80808070"
+  "broad_spectrum" = "#ef7f7f",
+  "fluoroquinolones" = "#b3bce2",
+  "both" = "#6a4c95",
+  "not_antibacterial" = "white",
+  "other_antibacterials" = "#f5c5e1"
 )
  
 # --- Create the Heatmap using ggplot2 ---
-heatmap <- ggplot(df_complete, aes(x = day, y = pid, fill = exposure_category)) +
-  geom_tile(aes(fill = exposure_category, color = has_stool),  linewidth = 0.7, show.legend = FALSE     )+  
-  scale_fill_manual(values = color_palette) +  # Apply the defined color palette
-  scale_color_manual(values = c(NA,'brown')) + 
-  scale_x_continuous(breaks = seq(min(df_complete$day), max(df_complete$day), by = 5),
-                     minor_breaks = seq(min(df_complete$day),max(df_complete$day), by = 1)) + # Show every 5th day, with minor breaks
+heatmap <- ggplot(df_complete, aes(x = day, y = pid)) +
+  # LAYER 1: The filled tiles for exposure.
+  # This draws all filled tiles with a default thin black border.
+  geom_tile(aes(fill = exposure_category), 
+            color = "black",     # All tiles in this layer get a black border
+            linewidth = 0.01,     # Make it very thin
+            show.legend = FALSE) +
+  
+  # LAYER 2: The stool sample borders.
+  # This filters the data to *only* rows with stool samples
+  # and draws a thick, empty box on top.
+  geom_tile(data = df_complete |> filter(has_stool == TRUE), 
+            aes(color = has_stool),  # Map color to get the legend
+            fill = NA,             # Make the fill transparent
+            linewidth = 0.5,         # Make the border thick
+            show.legend = FALSE) + # We already have a legend
+  scale_fill_manual(values = color_palette, na.value = NA) + # Your fill scale (with the fix)
+  scale_color_manual(values = c("TRUE" = 'black')) + # Color scale for stool (now only needs TRUE)
+  scale_x_continuous(breaks = c(0, 20, 40)) + # Show every 5th day, with minor breaks
   labs(title = "",
        x = "Transplant day",   
        y = "Patient ID",
@@ -148,13 +163,16 @@ heatmap <- ggplot(df_complete, aes(x = day, y = pid, fill = exposure_category)) 
   theme(
     panel.grid.major = element_blank(),    # Remove major grid lines
     panel.grid.minor = element_blank(), 
-    legend.position = "bottom"   ,      # Place the legend at the bottom
-    axis.text.x = element_text(size = 6, angle = 0, hjust = 1, vjust=0.5),
-  axis.text.y = element_blank(),
-  axis.title = element_text(size = 8),
+    legend.position = "top"   ,      # Place the legend at the bottom
+    axis.text.x = element_text(size = 11, angle = 0, hjust = 1, vjust=0.5),
+    axis.text.y = element_text(size = 6, angle = 0, hjust = 1, vjust=0.5),
+  #axis.text.y = element_blank(),
+  axis.title = element_text(size = 11),
   legend.text = element_text(size = 6),
   legend.title = element_text(size = 8)
   )
+
+ggsave('../data/R21_heatmap.pdf', width = 4, height = 10)
 ```
 
 # B. the histogram and percentage plots of the different categories of the medication exposure
